--- a/sigvsback/.github/workflows/build.yml
+++ b/sigvsback/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: pipeline de desenvolvimento
+name: pipeline de desenvolvimento2
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
